Updated help screen and fixed alignment

--- a/src/main/resources/gui/style.css
+++ b/src/main/resources/gui/style.css
@@ -46,3 +46,7 @@ VBox {
     -fx-font-size: 12;
     font-size: 12;
 }
+
+.left-vbox {
+    -fx-alignment: top-left;
+}
